--- a/menu.html
+++ b/menu.html
@@ -7,8 +7,25 @@
   <title>Easy menu</title>
 </head>
 <body>
+
   <nav>
-    <a href=""></a>
+    <div id="horizontal-underline"></div>
+    <a href="#">About</a>
+    <a href="#">Menu</a>
+    <a href="#">Store</a>
+    <a href="#">Service</a>
+    <a href="#">Responsibility</a>
   </nav>
+
+  <nav>
+    <div id="vertical-underline"></div>
+    <a href="">About</a>
+    <a href="">Menu</a>
+    <a href="">Store</a>
+    <a href="">Service</a>
+    <a href="">Responsibility</a>
+  </nav>
+
+  <script src="main.js"></script>
 </body>
 </html>
