--- a/menu.html
+++ b/menu.html
@@ -11,19 +11,19 @@
   <nav>
     <div id="horizontal-underline"></div>
     <a href="#">About</a>
-    <a href="#">Menu</a>
     <a href="#">Store</a>
     <a href="#">Service</a>
-    <a href="#">Responsibility</a>
+    <a href="#">Login</a>
+    <a href="#">My page</a>
   </nav>
 
   <nav>
     <div id="vertical-underline"></div>
-    <a href="">About</a>
-    <a href="">Menu</a>
-    <a href="">Store</a>
-    <a href="">Service</a>
-    <a href="">Responsibility</a>
+    <a href="#">About</a>
+    <a href="#">Store</a>
+    <a href="#">Service</a>
+    <a href="#">Login</a>
+    <a href="#">My page</a>
   </nav>
 
   <script src="main.js"></script>
